--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
     - run: chrome --version
      
     - name: Build with Maven
-      run: mvn -B clean test
+      run: mvn -B clean
 
     - uses: nanasess/setup-chromedriver@v2
 
