--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,9 +28,9 @@ jobs:
 
     - uses: nanasess/setup-chromedriver@v2
 
-    - run: |
-        export DISPLAY=:99
-        chromedriver --url-base=/wd/hub
+    #- run: |
+    #    export DISPLAY=:99
+    #    chromedriver --url-base=/wd/hub
 
     - run: mvn test
       env:
