First CI attempt v4

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,12 +26,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean
 
-    - uses: nanasess/setup-chromedriver@v2
-
     #- run: |
     #    export DISPLAY=:99
     #    chromedriver --url-base=/wd/hub
 
-    - run: mvn test
-      env:
-        CHROMEDRIVER: ${{ github.workspace }}/chromedriver
+    - run: mvn test -Dcucumber.filter.tags="@regression"
